--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -1,4 +1,13 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+  .toolbar {
+    justify-content: space-between;
+
+    .link {
+      text-decoration: none;
+      color: white;
+      padding: 0 10px;
+    }
+  }
+}
