--- a/src/components/layout/MainLayout/MainLayout.module.scss
+++ b/src/components/layout/MainLayout/MainLayout.module.scss
@@ -1,4 +1,8 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+  .container {
+    margin: 0 auto;
+    max-width: 1040px;
+  }
+}
