Add post view, page not found, backend file

--- a/src/components/views/NotFound/NotFound.module.scss
+++ b/src/components/views/NotFound/NotFound.module.scss
@@ -1,4 +1,11 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+  padding: 20px;
+  .title {
+    color: red;
+  }
+  .button {
+    margin: 20px;
+  }
+}
