--- a/src/components/views/PostEdit/PostEdit.module.scss
+++ b/src/components/views/PostEdit/PostEdit.module.scss
@@ -1,4 +1,35 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+  .paper {
+    margin: 25px 20px -20px 20px;
+    padding: 0 20px 20px;
+
+    .btnSave {
+      margin-top: 20px;
+      height: 55px;
+      padding: 0 30px;
+      float: right;
+    }
+
+    .icon {
+      padding-right: 5px;
+    }
+  }
+
+  .imageUploader {
+    margin: 25px 20px -30px 20px;
+  }
+
+  .textField {
+    margin-top: 20px;
+    margin-right: 20px;
+  }
+
+  .status {
+    margin-top: 20px;
+    margin-right: 20px;
+    float: right;
+    width: 200px;
+  }
+}
